[package]
name = "sstra"
version = "0.2.0"
authors = ["Dimitri Aivaliotis <aglarond@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10"
actix-rt = "1.1.1"
async-trait = "0.1.50"
chrono = "0.4"
clap = { version = "2", features = ["yaml"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
yahoo_finance_api = { version = "1.0" }

[dev-dependencies]
tokio-test = "*"

[profile.release]
opt-level = 3
codegen-units = 1
debug = 2
